--- a/apps/docmaker/templates/latex/ln.tex
+++ b/apps/docmaker/templates/latex/ln.tex
@@ -30,7 +30,7 @@
 \section{{ '{' }}{{ slide.title }}{{ '}' }}
 
 \begin{tikzpicture}[remember picture,overlay]
-\node [xshift=-0.25in,yshift=-0.25in] at (current page.north east) [below left] {{ '}' }}\sf \small {{ activity.label }}{{ '}' }};
+\node [xshift=-0.25in,yshift=-0.25in] at (current page.north east) [below left] {{ '{' }}\sf \small {{ activity.label }}{{ '}' }};
 \end{tikzpicture}
 
 {% if slide.image %}
