Major improvement in docmaker structure

--- a/apps/docmaker/_/latex/temp.tex
+++ b/apps/docmaker/_/latex/temp.tex
@@ -1,11 +1,11 @@
 
 \documentclass{article}
 
-\usepackage[margin=1.33in]{geometry}
+\usepackage[margin=0.625in, rmargin=3in]{geometry}
 \usepackage{p200}
 \usepackage[colorlinks=true,linkcolor=blue]{hyperref}
 
-\hypersetup{pdftitle = {Physics 203 Course Syllabus} }
+\hypersetup{pdftitle = {Physics 203 { '}' }} }
 \hypersetup{pdfauthor = {}, pdfsubject = {Physics} }
 
 \pagestyle{plain}
@@ -13,71 +13,16 @@
 \begin{document}
 
 \begin{center}
-{\LARGE Physics 203 Course Syllabus}
-\vskip 0.25cm
-{\large The microscopic source of force}
-
-\vskip 0.25cm
-{\large Summer 2013}
+\LARGE{} \\[5mm]
+\small{\sf Physics 203 Lab: Electric field mapping} \\[2mm]
+\small{\sf Jun 26, 2013}
 \end{center}
 
-\begin{center}
-\renewcommand{\arraystretch}{1.5}
-\renewcommand{\tabcolsep}{0.2cm}
-\begin{tabular}{ll} 
-\hline
-Instructor   & David J. Ulrich \\ 
-Website      & \url{} \\ 
-E-mail       & \texttt{} \\ 
-Office       &  \\ 
-Office Hours &  \\ 
-\hline
-\end{tabular}
-\end{center}
+\section{Equipment}
 
-\section{Course Overview}
+\begin{itemize}
 
-This class rocks!
-
-\clearpage
-
-
-
-\section{Class Schedule}
-
-This following schedule should be considered tentative. In particular, based on class progress, we may slow down or speed up the lecture schedule.
-
-\begin{center}
-
-\renewcommand{\arraystretch}{1.5}
-\renewcommand{\tabcolsep}{0.2cm}
-
-\begin{tabular}{@{}cccp{16mm}p{64mm}@{}}
-%\begin{tabular}{cccll}
-\hline
-\textbf{Wk} &
-\textbf{Day} &
-\textbf{Date} &
-\textbf{Type} &
-\textbf{Title} &
-\hline
-
-1 &
-Mon &
-Jun 24 &
- &
- \\
-
-1 &
-Wed &
-Jun 26 &
- &
- \\
-
-\hline
-\end{tabular}
-
-\end{center}
+\end{itemize}
 
 
 
