--- a/apps/docmaker/templates/latex/hs.tex
+++ b/apps/docmaker/templates/latex/hs.tex
@@ -5,27 +5,26 @@
 \usepackage{p200}
 \usepackage[colorlinks=true,linkcolor=blue]{hyperref}
 
-\hypersetup{pdftitle = {{ '{' }}{{ classroom.title }} {{ document_label }}{ '}' }} }
+\hypersetup{pdftitle = {{ '{' }}{{ classroom.title }} {{ document_label }}{{ '}' }} }
 \hypersetup{pdfauthor = {{ '{' }}{{ classroom.instructor.name }}{{ '}' }}, pdfsubject = {Physics} }
 
 \pagestyle{plain}
 
 \begin{document}
 
+\newpage
+
 \begin{center}
-\LARGE{{ '{' }}{{ lab.title }}{{ '}' }} \\[5mm]
-\small{{ '{' }}\sf {{ classroom.title }} {{ activity.label }}{{ '}' }} \\[2mm]
+\LARGE{{ '{' }}{{ classroom.title }} {{ activity.label }}{{ '}' }} \\[2mm]
 \small{{ '{' }}\sf {{ activity_block.date|date:"b d, Y"|title }}{{ '}' }}
 \end{center}
 
-\section{Equipment}
-
-\begin{itemize}
-{% for e in lab.equipment.all %}
-\item {{ e.item }}
+{% for x in exercise_list %}
+\textbf{{ '{' }}{{ forloop.counter }}.{{ '}' }}
+\marginpar{{ '{' }}\footnotesize\sf {{ x.answer|rst2latex }}{{ '}' }}
+\quad {{ x.question|rst2latex }}
+\par \textbf{Solution}
+\par {{ x.solution|rst2latex }}
 {% endfor %}
-\end{itemize}
-
-{{ lab.worksheet|rst2latex }}
 
 \end{document}
