Docmaker working smoothly now

--- a/apps/docmaker/templates/latex/hp.tex
+++ b/apps/docmaker/templates/latex/hp.tex
@@ -16,7 +16,7 @@
 
 \begin{center}
 \LARGE{{ '{' }}{{ classroom.title }} {{ activity.label }}{{ '}' }} \\[2mm]
-\small{{ '{' }}\sf {{ activity_block.date|date:"b d, Y"|title }}{{ '}' }}
+\small{{ '{' }}\sf {{ activity.date|date:"b d, Y"|title }}{{ '}' }}
 \end{center}
 
 {% for x in exercise_list %}
