--- a/apps/docmaker/templates/latex/lf.tex
+++ b/apps/docmaker/templates/latex/lf.tex
@@ -23,7 +23,7 @@
 
 \begin{tabular}{p{1.25in}p{1.25in}p{1.25in}p{1.25in}}
 INSTRUCTOR: & {{ classroom.instructor.public_name }} & LAB SECTION: & {{ classroom.abbr }} \\
-DATE(S) NEEDED: & \textbf{{ '{' }}{{ activity_block.date|date:"b d, Y"|title }}{{ '}' }} & TIME NEEDED: & \textbf{6:00 pm} \\
+DATE(S) NEEDED: & \textbf{{ '{' }}{{ activity.date|date:"b d, Y"|title }}{{ '}' }} & TIME NEEDED: & \textbf{6:00 pm} \\
 LAB TITLE: & \multicolumn{3}{l}{{ '{' }}\textbf{{ '{' }}{{ lab.title }}{{ '}' }}{{ '}' }} \\
 &&& \\
 FILLED BY: & \underline{\makebox[1in]{}}
