--- a/apps/docmaker/templates/latex/lb.tex
+++ b/apps/docmaker/templates/latex/lb.tex
@@ -15,7 +15,7 @@
 \begin{center}
 \LARGE{{ '{' }}{{ lab.title }}{{ '}' }} \\[5mm]
 \small{{ '{' }}\sf {{ classroom.title }} {{ activity.label }}{{ '}' }} \\[2mm]
-\small{{ '{' }}\sf {{ activity_block.date|date:"b d, Y"|title }}{{ '}' }}
+\small{{ '{' }}\sf {{ activity.date|date:"b d, Y"|title }}{{ '}' }}
 \end{center}
 
 \section{Equipment}
