Eliminated use of FilePathField
Replaced with use of CharField to store filename only. Created a li'l
function get_choices_from_path to create a dropdown in admin. Cf. https://code.djangoproject.com/ticket/6896

--- a/apps/docmaker/_/latex/temp.tex
+++ b/apps/docmaker/_/latex/temp.tex
@@ -70,7 +70,7 @@ is lost forever in a mini-black hole. What is this radius?
 
 
 \begin{center}
-\includegraphics[scale=0.4]{/home/dave/Repos/github/spot/content/images/gru-shrinks-moon2.png}
+\includegraphics[scale=0.4]{C:/"Program Files"/my/github/spot/content/images/gru-shrinks-moon2.png}
 
 \label{fig:gru-shrinks-moon2-png}
 \end{center}
