Banner/slide support

--- a/apps/docmaker/_/latex/temp.tex
+++ b/apps/docmaker/_/latex/temp.tex
@@ -18,6 +18,9 @@
 {\large The microscopic source of force}
 
 \vskip 0.25cm
+\includegraphics[width=\textwidth]{C:/"Program Files"/my/github/spot/content/banners/203.jpg}
+
+\vskip 0.25cm
 {\large Summer 2013}
 \end{center}
 
