Pushed docmaker title to activity

--- a/apps/docmaker/_/latex/temp.tex
+++ b/apps/docmaker/_/latex/temp.tex
@@ -68,14 +68,14 @@ This following schedule should be considered tentative. In particular, based on 
 1 &
 Mon &
 Jun 24 &
- &
- \\
+Lecture 1 &
+Electric Field and Potential \\
 
 1 &
 Wed &
 Jun 26 &
- &
- \\
+Lab 1 &
+Projectiles and Free-Fall \\
 
 \hline
 \end{tabular}
