--- a/apps/docmaker/templates/latex/sy.tex
+++ b/apps/docmaker/templates/latex/sy.tex
@@ -68,8 +68,8 @@ This following schedule should be considered tentative. In particular, based on 
 {{ block.week }} &
 {{ block.weekday }} &
 {{ block.date|date:"b d"|title }} &
-{{ block.type }} &
-{{ block.heading }} \\
+{{ block.label }} &
+{{ block.title }} \\
 {% endfor %}
 \hline
 \end{tabular}
