Attempting to add modification to ExerciseSet

--- a/apps/docmaker/_/latex/temp.tex
+++ b/apps/docmaker/_/latex/temp.tex
@@ -1,86 +1,31 @@
 
 \documentclass{article}
 
-\usepackage[margin=1.33in]{geometry}
 \usepackage{p200}
 \usepackage[colorlinks=true,linkcolor=blue]{hyperref}
 
 \hypersetup{pdftitle = {Physics 203 } }
 \hypersetup{pdfauthor = {}, pdfsubject = {Physics} }
 
-\pagestyle{plain}
+\pagestyle{headings}
 
 \begin{document}
 
-\begin{center}
-{\LARGE Physics 203 }
-\vskip 0.25cm
-{\large The microscopic source of force}
+\setcounter{page}{1}
 
-\vskip 0.25cm
-\includegraphics[width=\textwidth]{C:/"Program Files"/my/github/spot/content/banners/203.jpg}
-
-\vskip 0.25cm
-{\large Summer 2013}
-\end{center}
+\begin{tikzpicture}[remember picture,overlay]
+\node [xshift=-1in,yshift=-1in] at (current page.north east) [below left] {Name: \underline{\makebox[2in]{}}};
+\end{tikzpicture}
 
 \begin{center}
-\renewcommand{\arraystretch}{1.5}
-\renewcommand{\tabcolsep}{0.2cm}
-\begin{tabular}{ll} 
-\hline
-Instructor & David J. Ulrich \\ 
-
-
-
-
-\hline
-\end{tabular}
+\LARGE{Physics 203 Quiz 1} \\[2mm]
+\small{\sf Jun 26, 2013}
 \end{center}
 
-\section{Course Overview}
+\thispagestyle{empty}
 
-This class rocks!
-
-\clearpage
-
-
-
-\section{Class Schedule}
-
-This following schedule should be considered tentative. In particular, based on class progress, we may slow down or speed up the lecture schedule.
-
-\begin{center}
-
-\renewcommand{\arraystretch}{1.5}
-\renewcommand{\tabcolsep}{0.2cm}
-
-\begin{tabular}{@{}cccp{16mm}p{64mm}@{}}
-%\begin{tabular}{cccll}
-\hline
-\textbf{Wk} &
-\textbf{Day} &
-\textbf{Date} &
-\textbf{Type} &
-\textbf{Title} &
-\hline
-
-1 &
-Mon &
-Jun 24 &
-Lecture 1 &
-Electric Field and Potential \\
-
-1 &
-Wed &
-Jun 26 &
-Lab 1 &
-Projectiles and Free-Fall \\
-
-\hline
-\end{tabular}
-
-\end{center}
+\section*{Word Problems}
+Show all your work and circle your final answer. (Ten points each.) \par
 
 
 
